# tpm-js

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dcmake.sh  dinit.sh  dmake.sh  index.html
css/: main.css
html/js/: consts.js
html/templates/: attestation.html  authorization.html  certificates.html  glossary.html  importing.html  index.html  introduction.html  keys.html  macros.html  ownership.html  pcrs.html  properties.html  random.html  reading.html  sealing.html  simulator_window.html  welcome.html
js/: main.js
src/: app.cc  app.h  app_test.cc  bindings.cc  debug.cc  debug.h  keyed_hash.cc  keyed_hash.h  log.cc  log.h  simulator.cc  simulator.h  simulator_test.cc  tss_adapter.cc  tss_adapter.h  tss_adapter_test.cc  util.cc  util.h  util_test.cc
tools/: template_builder.py
wasm/: bindings.js  bindings.wasm
